# scvi-tools

./: .cirun.yml  .codacy.yaml  .codecov.yaml  .codecov.yml  .cruft.json  .editorconfig  .flake8  .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  .prettierignore  .prospector.yml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  BE_curves.py  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  CSF.py  CSF_BLOOD.py  Continuous.py  DE.benchmark.py  DE.ipynb  DE.py  DE_robust.py  Dockerfile  Easy1.KNN.py  Easy2.KNN.py  Easycase1.compare.py  Easycase1.robustness.py  Easycase2.compare.fine.py  Easycase2.compare.py  Four.py  HISTORY.rst  LICENSE  MANIFEST.in  MNNs.py  Makefile  (+57 more)
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  release_checklist.md  usage-question.md  use-question.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yml  build_image.yaml  build_image_base.yaml  build_image_branch.yaml  build_image_latest.yaml  gpu.yml  lint.yml  release.yml  release_notes.md  test.yml  test_linux.yml  test_linux_autotune.yml  test_linux_benchmark.yml  test_linux_cpu.yml  test_linux_cpu_pre.yml  test_linux_cuda.yml  test_linux_custom_dataloader.yml  test_linux_internet.yml  test_linux_jax.yml  test_linux_mlflow.yml  test_linux_mps.yml  test_linux_multigpu.yml  test_linux_nonjax.yml  test_linux_optional.yml  test_linux_optional_cuda.yml  test_linux_pre.yml  test_linux_private.yml  test_linux_resolution.yml  test_linux_resolutions.yml  test_macos.yml  test_macos_cpu.yml  test_macos_m1.yml  test_macos_mps.yml  test_windows.yml  test_windows_cpu.yml  tutorials.yaml
Additional_Scripts/: CD4BCELL.DN.gmt  CD4BCELL.UP.gmt  CD4CD8.DN.gmt  CD4CD8.UP.gmt  CD8BCELL.DN.gmt  CD8BCELL.UP.gmt  CD8NK.DN.gmt  CD8NK.UP.gmt  GrepGeneSignatures.sh  KNNcurves.py  SeuratPCA.R  Seurat_hvginfo.R  SpringViz.py  barplots.py  dotplot.R  evaluation_heatmap.py  genesets.txt  poprm_boxplot.R  poprm_plots.py  prep_gbm.R  runSeurat.R  run_full.sh  scmap_dotplot.R
conda-recipes/: meta.yaml
conda-recipes/scvi/: meta.yaml
contrib/: README.rst  preprocess_cortex.py
diagvi_docs/: DiagVI.ipynb  README.md
docs/: Makefile  _authors.rst  authors.rst  basic_tutorial.nblink  conf.py  contributing.rst  dataset.rst  development.rst  faq.md  history.rst  index.md  index.rst  inference.rst  installation.md  installation.rst  make.bat  metrics.rst  models.rst  modules.rst  references.bib  references.md  references.rst  requirements.txt  scvi.dataset.rst  scvi.inference.rst  scvi.metrics.rst  scvi.models-modules.rst  scvi.models.rst  scvi.rst  scvi_tutorials.py  train.rst  usage.rst
docs/_ext/: filterlist.py  tutorial_filter.py
docs/_static/: override.css
docs/_templates/: class_no_inherited.rst  layout.html
docs/api/: autotune.rst  classes.rst  core.rst  data.rst  dataset.rst  datasets.md  datasets.rst  developer.md  developer.rst  external.rst  index.md  index.rst  inference.rst  model.rst  models.rst  settings.rst  user.md  user.rst
docs/architecture/: harreman-block-diagram.html
docs/contributed_tutorials/: index.rst
docs/contributing/: index.md  index.rst
docs/developer/: code.md  index.md  maintenance.md
docs/examples/: scRNA_and_smFISH.ipynb  scVI-data-loading.ipynb  scVI-dev.ipynb  scVI-reproducibility.ipynb  scVI-semi-supervised.ipynb
docs/extensions/: edit_colab_url.py  filterlist.py  typed_returns.py
docs/faq/: index.md
docs/js/: filter_tutorial_tags.js
docs/maintenance/: index.rst
docs/notebooks/: Dropseq_and_STARmap.ipynb  Makefile  SMARTseq_and_STARmap.ipynb  Untitled.ipynb  Zeisel2015_and_Smfish.ipynb  Zeisel2018_and_Smfish.ipynb  annotation.ipynb  basic_tutorial.ipynb  data_loading.ipynb  harmonization.ipynb  scRNA_and_smFISH.ipynb  scRNA_and_starMAP.ipynb  scVI-reproducibility.ipynb  scVI_reproducibility.config.json  scVI_reproducibility.ipynb  scanVI-semi-supervised.ipynb
docs/public_api/: index.rst
docs/release_notes/: index.md  index.rst  pre_v0.7.0.md  pre_v0.7.0.rst  v0.10.0.md  v0.10.0.rst  v0.10.1.md  v0.10.1.rst  v0.11.0.md  v0.11.0.rst  v0.12.0.md  v0.12.0.rst  v0.12.1.md  v0.12.1.rst  v0.12.2.md  v0.12.2.rst  v0.13.0.md  v0.13.0.rst  v0.14.0.md  v0.14.0.rst  v0.14.1.md  v0.14.1.rst  v0.14.2.md  v0.14.2.rst  v0.14.3.md  v0.14.3.rst  v0.14.4.md  v0.14.4.rst  v0.14.5.md  v0.14.5.rst  v0.14.6.md  v0.14.6.rst  v0.15.0.md  v0.15.0.rst  v0.15.1.md  v0.15.1.rst  v0.15.2.md  v0.15.2.rst  v0.15.3.md  v0.15.4.md  (+27 more)
docs/releasenotes/: index.rst  v0.7.1.rst
docs/testing/: cards.md  index.md
docs/tutorials/: 10_R.md  1_index_quick_start.md  2_index_scrna.md  3_index_atac.md  4_index_scbs.md  5_index_multimodal.md  6_index_spatial.md  7_index_hub.md  9_index_dev.md  autotune.nblink  autozi.nblink  basic_tutorial.nblink  data_loading.nblink  gimvi.nblink  harmonization.nblink  index.md  index.rst  index_atac.md  index_custom_dl.md  index_cytometry.md  index_dev.md  index_hub.md  index_multimodal.md  index_quick_start.md  index_r.md  index_scbs.md  index_scrna.md  index_spatial.md  (+6 more)
examples/: scVI-data-loading.ipynb  scVI-dev.ipynb  scVI-heatmap.ipynb  scVI-semi-supervised.ipynb
notebooks/: assignment.ipynb  deconvo_sanity_checks.py  sanity_checks_utils.py  scvi_deconvolution_cti.ipynb  scvi_sanity_checks.py  scvi_sanity_checks_toy.ipynb  scvi_sanity_checks_utils.py  scvi_signature.ipynb  scvi_signature_cti.ipynb  tutorial_scvi_0.ipynb
scvi/: __init__.py  _compat.py  _constants.py  _decorators.py  _docs.py  _packageproxy.py  _settings.py  _types.py  _utils.py  benchmark.py  clustering.py  dataset.py  differential_expression.py  imputation.py  inference.py  log_likelihood.py  modules.py  scvi.py  semi_supervised_scVI.py  train.py  training.py  utils.py  vae.py  vaec.py  visualization.py
tests/: conftest.py  test_autotune.py  test_brain_large_speedup.py  test_notebook.py  test_remove_empty.py  test_scvi.py  test_warnings.py  test_zeros_synth.py  zifa_full.py
(+936 files in other folders)
