[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "scvi-tools"
version = "1.5.0.post1"
description = "Deep probabilistic analysis of single-cell omics data."
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "The scvi-tools development team", email = "ori.kronfeld@weizmann.ac.il" },
]

authors = [
  { name = "The scvi-tools development team" },
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "anndata",
  "docrep>=0.3.2",
  "lightning>=2",
  "ml-collections",
  "mudata",
  "numba>=0.60",
  "numpy",
  "pandas",
  "pyro-ppl",
  "rich",
  "scanpy[skmisc]>=1.10",
  "scikit-learn",
  "scipy",
  "sparse>=0.14",
  "tensorboard",
  "torch",
  "torchmetrics",
  "tqdm",
  "xarray",
]

optional-dependencies.all = [ "scvi-tools[dev,docs,tutorials]" ]
# scvi.autotune (TODO: New autotune not suppoorted on Windows yet)
optional-dependencies.autotune = [
  "hyperopt>=0.2",
  "muon",
  "ray[tune]; sys_platform!='win32'",
  "scib-metrics",
  "setuptools>=77.0.3,<82",
]
optional-dependencies.cuda = [ "cupy-cuda12x", "torchaudio", "torchvision" ]
optional-dependencies.cuda13 = [ "cupy-cuda13x", "torchaudio", "torchvision" ]
# for custom dataloders
optional-dependencies.dataloaders = [
  "annbatch[zarrs]>=0.2",
  "cellxgene-census",
  "lamindb>=1.12.1",
  "tiledbsoma",
  "tiledbsoma-ml",
  "torchdata",
]
optional-dependencies.dev = [ "scvi-tools[editing,tests]" ]
# for diagvi
optional-dependencies.diagvi = [ "geomloss", "torch-geometric" ]
optional-dependencies.docs = [
  "docutils>=0.8,!=0.18.*,!=0.19.*", # see https://github.com/scverse/cookiecutter-scverse/pull/205
  "ipython",
  "myst-nb",
  "myst-parser",
  "sphinx<9",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme>=1.0.1",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-hoverxref",
  "sphinxcontrib-bibtex",
  "sphinxext-opengraph",
]
optional-dependencies.docsbuild = [ "mlx", "scvi-tools[autotune,diagvi,docs,hub]" ]

optional-dependencies.editing = [ "jupyter", "pre-commit" ]
# for files sharing or handling
optional-dependencies.file_sharing = [ "fcswrite", "gdown", "pooch", "readfcs" ]
# scvi.hub dependencies
optional-dependencies.hub = [ "boto3", "dvc[s3]", "huggingface-hub" ]
# for models interpretability
optional-dependencies.interpretability = [ "captum", "decoupler", "shap" ]
optional-dependencies.metal = [ "mlx-metal", "torchaudio", "torchvision" ]

# for mlflow
optional-dependencies.mlflow = [ "gputil", "mlflow>=3.9", "nvidia-ml-py", "psutil" ]
optional-dependencies.optional = [
  "igraph",
  "leidenalg",
  "pynndescent",
  "scvi-tools[autotune,diagvi,file_sharing,hub,interpretability,mlflow,parallel,regseq]",
]
# for parallelization engine
optional-dependencies.parallel = [ "dask[array]", "zarr" ]
# for rapids
optional-dependencies.rapids = [ "cupy", "rapids-singlecell[rapids]" ]
optional-dependencies.rapids-cuda12 = [
  "cugraph-cu12>=24",
  "cuml-cu12>=24",
  "cupy-cuda12x",
  "rapids-singlecell-cu12[rapids]",
]
optional-dependencies.rapids-cuda13 = [
  "cugraph-cu13>=24",
  "cuml-cu13>=24",
  "cupy-cuda13x",
  "rapids-singlecell-cu13[rapids]",
]

# scvi.data.add_dna_sequence
optional-dependencies.regseq = [ "biopython>=1.81", "genomepy" ]
optional-dependencies.test = [ "scvi-tools[tests]" ]
optional-dependencies.tests = [ "coverage", "pytest", "pytest-pretty", "scvi-tools[optional]" ]
optional-dependencies.tpu = [ "torch-xla[tpu]" ]
optional-dependencies.tutorials = [
  "biomart",
  "cell2location",
  "jupyter",
  "matplotlib",
  "plotnine",
  "scrublet",
  "scvi-tools[dataloaders,optional]",
  "seaborn",
  "squidpy>=1.6",
  "umap-learn>=0.5",
]

urls.Documentation = "https://scvi-tools.org"
urls.Home-page = "https://scvi-tools.org"
urls.Source = "https://github.com/scverse/scvi-tools"

[tool.hatch.build.targets.wheel]
packages = [ 'src/scvi' ]

[tool.uv]
# uvloop does not support Windows; override the transitive dependency
# pulled in via flax -> orbax-checkpoint -> uvloop
override-dependencies = [
  "uvloop ; sys_platform != 'win32'",
]

[tool.ruff]
target-version = "py313"

line-length = 99
indent-width = 4
src = [ "src" ]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

# Like Black, indent with spaces, rather than tabs.
format.indent-style = "space"
# Like Black, use double quotes for strings.
format.quote-style = "double"
# Like Black, automatically detect the appropriate line ending.
format.line-ending = "auto"
# Like Black, respect magic trailing commas.
format.skip-magic-trailing-comma = false
format.docstring-code-format = true
lint.select = [
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "D",      # pydocstyle
  "E",      # Error detected by Pycodestyle
  "F",      # Errors detected by Pyflakes
  "FA",     # flake8-future-annotations
  "I",      # isort
  "NPY",    # numpy formatting
  "PT",     # pytest style
  "RUF100", # Report unused noqa directives
  "TCH",    # flake8-type-checking
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # Warning detected by Pycodestyle
]
lint.ignore = [
  # Errors from function calls in argument defaults. These are fine when the result is immutable.
  "B008",
  # Missing docstring in the public module
  "D100",
  # Missing docstring in the public package
  "D104",
  # Missing docstring in __init__
  "D107",
  # We want docstrings to start immediately after the opening triple quote
  "D213",
  # the first line should end with a period [Bug: doesn't work with single-line docstrings]
  "D400",
  # The first line should be in an imperative mood; try rephrasing
  "D401",
  # allow I, O, l as variable names -> I is the identity matrix
  "E741",
  # We support np.random functions.
  "NPY002",
  # Raising ValueError is enough in tests.
  "PT011",
]
lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."docs/*" = [ "BLE001", "I" ]
lint.per-file-ignores."src/scvi/__init__.py" = [ "I" ]
lint.per-file-ignores."tests/*" = [ "D" ]
lint.flake8-type-checking.exempt-modules = [  ]
lint.flake8-type-checking.strict = true
lint.pydocstyle.convention = "numpy"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
xfail_strict = true
markers = [
  "internet: mark tests that requires internet access",
  "optional: mark optional tests, usually take more time",
  "private: mark tests that uses private keys, like HF",
  "multigpu: mark tests that are used to check multi GPU performance",
  "autotune: mark tests that are used to check ray autotune capabilities",
  "custom dataloaders: mark tests that are used to check different custom data loaders",
  "dataloader: mark tests that are used to check data loaders",
  "mlflow: mark test for mlflow",
]

[tool.coverage.run]
source = [ "scvi" ]
omit = [
  "**/test_*.py",
]

[tool.jupytext]
formats = "ipynb,md"
